fix: hero layout shift

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -11,6 +11,7 @@
 }
 
 .hero {
+  height: fit-content;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -70,6 +71,7 @@
       gap: 0.6rem;
       margin: -2rem 0 0;
       padding-left: clamp(0rem, 1vw, 2rem);
+      animation: fadeIn 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
       .tag {
         align-self: start;
@@ -230,12 +232,19 @@
     }
 
     .hero-animation {
+      position: relative;
       width: clamp(200px, 100%, 500px);
       margin: 0 auto;
       animation: fadeIn 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
       @media (max-width: 640px) {
         width: clamp(200px, 100%, 400px);
+      }
+
+      span {
+        position: absolute;
+        width: clamp(200px, 100%, 500px);
+        opacity: 0;
       }
     }
   }
